practica4/ej5/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: svr2425.k8s.es
    http:
      paths:
      - path: /apache
        pathType: Exact
        backend:
          service:
            name: apache-service
            port:
              number: 9090
      - path: /nginx
        pathType: Exact
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
